# aiChatbot

./: demofile.txt  main.py  newPrompt.txt  prompt2.txt  prompt3.txt  pyproject.toml
app/: main.py
app/adapters/llm/: ollamallm.py
app/adapters/vectorstore/: vectordb.py
app/agents/: chat_agent.py
app/api/routes/: chat.py  messages.py
app/services/: chat_services.py
app/utilities/: rag.py  rag2.py  scanTitles.py
