[project]
name = "bigaiproyect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "langchain[openai]>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.1.8",
    "langchain-ollama>=0.3.4",
    "langgraph>0.2.27",
    "ruff>=0.12.3",
    "setuptools>=80.9.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "langchain-openai>=0.3.28",
]
